--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@
 #  initialize & set some vars
 # ============================
 
-AC_INIT([strongSwan],[5.9.4dr1-376-g1816c4415])
+AC_INIT([strongSwan],[5.9.4])
 AM_INIT_AUTOMAKE(m4_esyscmd([
 	echo tar-ustar
 	echo subdir-objects
